Network layer compilable version backup